src/objects/MX_WB_camposFiltrados__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sirve para agregar los campos para filtrar los miembros de campañas</description>
    <fields>
        <fullName>Limite__c</fullName>
        <label>Limite</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono1__c</fullName>
        <description>Campo que sirve para guardar el teléfono de un miembro de campaña</description>
        <label>Teléfono 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono2__c</fullName>
        <label>Teléfono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MX_WB_ph_Telefono3__c</fullName>
        <label>Teléfono 3</label>
        <type>Phone</type>
    </fields>
    <label>Campos de filtrado</label>
</CustomObject>